--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "gateway-server"
+name = "gateway-config"
 version = "0.1.0"
 edition = "2021"
+liciense = "Apache-2.0"
 
 [dependencies]
 tonic = "0.13"
@@ -11,6 +12,10 @@ futures = "0.3"
 async-trait = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[dev-dependencies]
+tower = "0.5.2"
+tokio-stream = { version = "0.1", features = ["net"] }
 
 [build-dependencies]
 tonic-build = "0.13"
