--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 liciense = "Apache-2.0"
 
+[features]
+default = []
+regenerate = ["dep:tonic-build"]
+
 [dependencies]
 tonic = "0.13"
 prost = "0.13.5"
@@ -17,5 +21,6 @@ serde_json = "1.0"
 tower = "0.5.2"
 tokio-stream = { version = "0.1", features = ["net"] }
 
-[build-dependencies]
-tonic-build = "0.13"
+[build-dependencies.tonic-build]
+version = "0.13"
+optional = true
