ci: actually run tests
Signed-off-by: Sergei Lukianov <me@slukjanov.name>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,9 +57,9 @@ jobs:
         run: |
           just --timestamp lint-gha gen lint
 
-      # - name: Run tests
-      #   run: |
-      #     just --timestamp test
+      - name: Run tests
+        run: |
+          just --timestamp test
 
       - name: Go mod tidy
         run: |
