--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,9 +11,6 @@ on:
       - release/*
     tags:
       - "v*"
-    paths-ignore:
-      - 'docs/**'
-      - 'README.md'
   pull_request:
     types:
       - opened
@@ -81,3 +78,57 @@ jobs:
         timeout-minutes: 30
         with:
           limit-access-to-actor: true
+
+  publish:
+    runs-on: lab-h
+    if: startsWith(github.event.ref, 'refs/tags/v') && github.event_name == 'push'
+    needs:
+      - test
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      # Bump gateway-proto in the gateway repository
+
+      - name: Checkout gateway repository
+        uses: actions/checkout@v4
+        with:
+          repository: githedgehog/gateway
+          path: gateway-repo
+          persist-credentials: false
+
+      - name: Bump gateway-proto in gateway
+        working-directory: gateway-repo
+        run: |
+          go get go.githedgehog.com/gateway-proto@${{ github.ref_name }}
+          go mod tidy && go mod vendor && git add vendor
+
+      - name: Generate token for the gateway repository
+        uses: actions/create-github-app-token@v2
+        id: gateway-app-token
+        with:
+          app-id: ${{ secrets.GATEWAY_APP_ID }}
+          private-key: ${{ secrets.GATEWAY_PRIVATE_KEY }}
+          repositories: |
+            gateway
+
+      - name: Create Pull Request for gateway
+        uses: peter-evans/create-pull-request@v5
+        id: gateway-pr
+        with:
+          token: ${{ steps.gateway-app-token.outputs.token }}
+          path: gateway-repo
+          branch: pr/auto/gateway-bump
+          commit-message: |
+            bump: gateway to ${{ github.ref_name }}
+
+            This is an automated commit created by GitHub Actions workflow,
+            in the gateway-proto repository.
+          signoff: true
+          title: "bump: gateway to ${{ github.ref_name }}"
+          body: |
+            This is an automated Pull Request created by GitHub Actions workflow,
+            in the gateway-proto repository.
