chore: build and push container with gwtestctl
Signed-off-by: Sergei Lukianov <me@slukjanov.name>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,6 +54,10 @@ jobs:
         run: |
           just --timestamp lint-gha gen lint
 
+      - name: Build everything
+        run: |
+          just --timestamp build docker-build
+
       - name: Run tests
         run: |
           just --timestamp test
