--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -101,6 +101,24 @@ jobs:
           go-version: stable
           cache: true
 
+      - name: Login to ghcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish Images and Bins on release
+        run: |
+          just --timestamp oci_repo=ghcr.io push push-multi
+
+      - name: Create GH Release
+        uses: softprops/action-gh-release@v2
+        with:
+          make_latest: true # TODO do it for master only
+          files: |
+            bin/gwtestctl-*.tar.gz
+
       # Bump gateway-proto in the gateway repository
 
       - name: Checkout gateway repository
