chore(rust): Enable clippy::all and clippy::pedantic
Signed-off-by: Manish Vachharajani <manish@githedgehog.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,7 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
+          components: rustfmt clippy
 
       - name: Lint and generate code
         run: |
