--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1.0"
 
 [dev-dependencies]
 tower = "0.5.2"
+thiserror = { version = "2.0.12", features = ["std"] }
 tokio-stream = { version = "0.1", features = ["net"] }
 
 [build-dependencies]
