chore(rust): Bump rust to 1.87.0
This also removes the trait to work around unstable
unbounded_shl/shr since 1.87.0 stabilizes support for those
functions.  This also silences clippy with regard to the now
unused trait.

Signed-off-by: Manish Vachharajani <manish@githedgehog.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "gateway_config"
 version = "0.2.3"
 edition = "2024"
 license = "Apache-2.0"
+rust-version = "1.87.0"
 
 [features]
 default = []
